Implement the test_server and client challenges